--- a/grc338/restaurantmenucss/index.html
+++ b/grc338/restaurantmenucss/index.html
@@ -94,7 +94,7 @@
             </li>
         </ul>
        
-        <h3 class="foodtype">Dessert</h3> 
+        <h3 class="foodtype">Desserts</h3> 
         <ul>
         <li><h4 class="food">Dark Chocolate Mousse</h4>
             <p class="description">with whipped cream and almond wafer</p>
