--- a/bored/keska.html
+++ b/bored/keska.html
@@ -1,1 +1,16 @@
+<!DOCTYPE HTML>
+<html>
 
+    <head>
+        <meta name="viewport" content="width=device‑width, initial‑scale=1"> 
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title> To my BF, Keska </title>
+    </head>
+   <body> 
+        
+       <h1>Hi Keska</h1>
+       <img class="images" src="IMG_7438.JPG" alt= ""A picture of me and Keska.>
+        
+   </body> 
+   
+</html>   
