--- a/grc338/redesign-content-hierarchy/index.html
+++ b/grc338/redesign-content-hierarchy/index.html
@@ -18,7 +18,7 @@
             <ul> 
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="location.html">Locations</a></li>
-                <li><a href="apparel.html">Apparel</a></li>
+                <li><a href="contest.html">The Big One</a></li>
             </ul>
             
         </div> <!--menu-->
