--- a/grc338/redesign-content-hierarchy/contest.html
+++ b/grc338/redesign-content-hierarchy/contest.html
@@ -60,7 +60,7 @@
                 <ol> 
                     
                     <li>The Big One must be eaten by yourself. Friends can cheer, but they can't chew</li>
-                    <li>Everything served must be eaten in 3- minutes or less. Sop it alllll up!</li>
+                    <li>Everything served must be eaten in 30 minutes or less. Sop it alllll up!</li>
                     <li>Upon completion, you must hold down the big one in your gut for 1 full minute</li>
                     
                 </ol>
