--- a/grc338/redesign-mobile-first/contest.html
+++ b/grc338/redesign-mobile-first/contest.html
@@ -35,7 +35,7 @@
         <img src="images/bigone.jpg" alt="'menu' in front of burgers">
         </div>
         
-        <div class="details"> 
+        <div class="maincontent">
 
         <h3>The Beef!</h3>
                 
