--- a/grc338/redesign-mobile-first/menu.html
+++ b/grc338/redesign-mobile-first/menu.html
@@ -127,7 +127,7 @@
             <div class="garden"> 
             <h3>From the Garden</h3>
             
-                <p>Dressings: Ranch, Italian, and Garlic Balsamic Vinegar</p>
+                <p class="dressing">Dressings: Ranch, Italian, and Garlic Balsamic Vinegar</p>
 
                 <ul>
                     
