--- a/grc338/redesign-mobile-first/contest.html
+++ b/grc338/redesign-mobile-first/contest.html
@@ -32,7 +32,7 @@
         </div> <!--mainmenu-->
                 
         <div class="image">
-        <img src="images/bigone.jpg" alt="'menu' in front of burgers">
+        <img src="images/bigone.jpg" alt="'The Big One Challenge' in front of burgers">
         </div>
         
         <div class="maincontent">
