--- a/grc338/final/index.html
+++ b/grc338/final/index.html
@@ -4,7 +4,7 @@
         <head>  
         <title>flourish cosmetics</title>  
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">  
-        <meta http-equiv="refresh" content="0;url=cobalt-cricket-yn7j.squarespace.com/">  
+        <meta http-equiv="refresh" content="0;url=https://flourishcosmetics.squarespace.com/">  
     </head>
 
     <body>
