--- a/grc338/final‑review/index.html
+++ b/grc338/final‑review/index.html
@@ -1,1 +1,13 @@
+<!doctype html>
 
+    <html>  
+        <head>  
+        <title>flourish skincare</title>  
+        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">  
+        <meta http-equiv="refresh" content="0;url=https://flourishskincare.squarespace.com/">  
+    </head>
+
+    <body>
+
+    </body>  
+    </html>
