--- a/grc339/final-website-mobile-first/index.html
+++ b/grc339/final-website-mobile-first/index.html
@@ -19,36 +19,36 @@
         <body>
             <div class="container">
                 <header>
-                    <h1> <img src="logo.png" alt="Logo of Euflourish."> </h1> <!-- Euflourish Logo in blush-colored font-->
+                    <h1> <img src="images/logo.png" alt="Logo of Euflourish."> </h1> <!-- Euflourish Logo in blush-colored font-->
                     
                     <nav>
                         <ul> <!-- ★ Use as many sections as you want, but replace the dashed lines with actual names for the sections of the publication. You may keep them all linked to the pound symbol, though. -->
-                            <li><a href="#">Skincare</a></li>
-                            <li><a href="#">Body Care</a></li>
+                            <li><a href="#">Skin</a></li>
+                            <li><a href="#">Body</a></li>
                             <li><a href="#">Makeup</a></li>
                             <li><a href="#">Hair</a></li>
                         </ul>
                     </nav>
                 </header>
                 <main>
-                    <section class="mainstory"><!-- ★ Teaser for the main story. You may want to give it a class.-->
+                    <section class="teaser"><!-- ★ Teaser for the main story. You may want to give it a class.-->
                         <a href="mainstory.html">
                             <figure>
-                                <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <img src="images/black-owned-brands.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Black-owned Beauty Brands That Need To Be On Your Radar</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
                         </a>    
                     </section>
                     
-                    <section> <!-- ★ Example of a teaser with image.  You may want to give it a different class. -->
+                    <section class="teaser"> <!-- ★ Example of a teaser with image.  You may want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <img src="images/pride-2020.jpeg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Incredible Pride-Themed Looks</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -57,7 +57,7 @@
 
                     <section> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
                         <a href="#">
-                                <h3>Heading of the story</h3>
+                                <h3>Sunscreens That Work on Dark Skin Tones</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -69,7 +69,7 @@
                             <figure>
                                 <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Makeup Looks to Wear With Your Face Mask</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -81,7 +81,7 @@
                             <figure>
                                 <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Do's and Dont's: TikTok Skincare Videos</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -93,7 +93,7 @@
                             <figure>
                                 <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>DIY Acrylic Nails During Quarantine</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -105,7 +105,7 @@
                             <figure>
                                 <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Best Moisturizers for Aging Skin</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -117,7 +117,7 @@
                             <figure>
                                 <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>15 Black-Owned Brands that Have Won <span>Allure</span> Best of Beauty Awards</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -129,7 +129,7 @@
                             <figure>
                                 <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Best of Korean Skincare</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -141,7 +141,7 @@
                             <figure>
                                 <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>What Does Quarantine Do To Your Skin? </h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
