--- a/grc339/final-website-mobile-first/mainstory.html
+++ b/grc339/final-website-mobile-first/mainstory.html
@@ -4,7 +4,9 @@
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1" />
             <link rel="stylesheet" type="text/css" href="style.css">
-            <title></title> <!-- ★ Please include a proper title.-->
+            <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
+            <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+            <title>Euflourish - Black-owned Beauty Brands That Need To Be On Your Radar</title> <!-- ★ Please include a proper title.-->
 
             <!-- Helpful meta tags to fight GitHub aggresive caching-->
                 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -16,31 +18,30 @@
         <body>
             <div class="container">
                 <header>
-                    <h1> <img src="logo.png" alt="Logo of _______."> </h1> <!-- Euflourish logo -->
+                    <h1> <img src="images/logo.png" alt="Logo of _______."> </h1> <!-- Euflourish logo -->
                     
                     <nav>
                         <ul> <!-- ★ Use as many sections as you want, but replace the dashed lines with actual names for the sections of the publication. You may keep them all linked to the pound symbol, though. -->
-                            <li><a href="#">idk</a></li>
-                            <li><a href="#">something</a></li>
-                            <li><a href="#">here</a></li>
-                            <li><a href="#">and</a></li>
-                            <li><a href="#">there</a></li>
+                            <li><a href="#">Skin</a></li>
+                            <li><a href="#">Body</a></li>
+                            <li><a href="#">Makeup</a></li>
+                            <li><a href="#">Hair</a></li>
                         </ul>
                     </nav>
                 </header>
                 <article>
                             <figure>
-                                <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
-                                <figcaption>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
+                                <img src="images/black-owned-4.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <figcaption>DELMAINE DONSON / GETTY IMAGES</figcaption>
                             </figure>
-                            <h2>Heading of the story</h2>
+                            <h2> Black-owned Beauty Brands That Need To Be On Your Radar</h2>
                     
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Phasellus egestas tellus rutrum tellus pellentesque. Orci nulla pellentesque dignissim enim sit amet. Vestibulum lorem sed risus ultricies tristique nulla. Mauris augue neque gravida in. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Et odio pellentesque diam volutpat. Amet nisl purus in mollis. Mattis nunc sed blandit libero. Quis vel eros donec ac odio tempor orci dapibus. Velit egestas dui id ornare arcu odio ut sem.</p>
 
                                 <p>Arcu dui vivamus arcu felis. Enim ut sem viverra aliquet eget. Nullam vehicula ipsum a arcu. Auctor neque vitae tempus quam. Id diam maecenas ultricies mi eget mauris pharetra et. Arcu non sodales neque sodales ut etiam sit amet nisl. Consequat ac felis donec et odio. Lorem sed risus ultricies tristique nulla aliquet enim tortor. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Tincidunt arcu non sodales neque. Urna duis convallis convallis tellus id interdum. Tortor vitae purus faucibus ornare. Tellus in metus vulputate eu scelerisque. Mattis molestie a iaculis at. Leo vel fringilla est ullamcorper eget nulla. Gravida quis blandit turpis cursus in hac.</p>
 
                                 <figure>
-                                    <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                    <img src="images/black-owned-1.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                                     <figcaption>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
                                 </figure>
 
