--- a/grc339/final-website-mobile-first/mainstory.html
+++ b/grc339/final-website-mobile-first/mainstory.html
@@ -62,6 +62,8 @@
                                 </figure>
                     
                 </article>
+                
+                <h2>More Beauty Content...</h2>
 
                 <aside>
                     <section class="image"> <!-- ★ Example of a teaser with image.  You may want to give it a different class. -->
