--- a/grc339/final-website-mobile-first/mainstory.html
+++ b/grc339/final-website-mobile-first/mainstory.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" type="text/css" href="style.css">
             <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
             <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-            <title>Euflourish - Black-owned Beauty Brands That Need To Be On Your Radar</title> <!-- ★ Please include a proper title.-->
+            <title>Euflourish - Black-owned Beauty Brands That Need To Be On Your Radar</title> 
 
             <!-- Helpful meta tags to fight GitHub aggresive caching-->
                 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -18,10 +18,10 @@
         <body>
             <div class="container">
                 <header>
-                    <h1> <img src="images/logo.png" alt="Logo of _______."> </h1> <!-- Euflourish logo -->
+                    <a href="index.html"> <img src="images/logo.png" alt="Logo of Euflourish."> </a> <!-- Euflourish logo -->
                     
                     <nav>
-                        <ul> <!-- ★ Use as many sections as you want, but replace the dashed lines with actual names for the sections of the publication. You may keep them all linked to the pound symbol, though. -->
+                        <ul> 
                             <li><a href="#">Skin</a></li>
                             <li><a href="#">Body</a></li>
                             <li><a href="#">Makeup</a></li>
@@ -30,7 +30,7 @@
                     </nav>
                 </header>
                 <article>
-                            <h2> Black-owned Beauty Brands That Need To Be On Your Radar</h2>
+                            <h2> Black-owned beauty brands that need to be on your radar</h2>
                             <figure>
                                 <img src="images/black-owned-4.jpg" alt="Five Black women of varying skintones wearing nude-toned tanktops.">
                                 <figcaption>Delmain Donson / Getty Images</figcaption>
@@ -66,21 +66,21 @@
                 <h2>More Beauty Content...</h2>
 
                 <aside>
-                    <section class="image"> <!-- ★ Example of a teaser with image.  You may want to give it a different class. -->
+                    <section class="image">
                         <a href="#">
                             <figure>
                                 <img src="images/k-beauty.jpg" alt="A variety of Korean skincare displayed on top of two very thin books.">
                             </figure>
-                                <h3>Best of Korean Skincare</h3>
+                                <h3>Best of Korean skincare</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
                         </a>    
                     </section>
 
-                    <section class="textonly"> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
+                    <section class="textonly"> 
                         <a href="#">
-                                <h3>Do's and Dont's: TikTok Skincare Videos</h3>
+                                <h3>Do's and dont's: TikTok skincare videos</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
